--- a/Assemblies/Assemblies.csproj
+++ b/Assemblies/Assemblies.csproj
@@ -4,9 +4,17 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <StartupObject>Assemblies.Program</StartupObject>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>strongkeys.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x86</PlatformTarget>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Program.cs~RF8f357f.TMP" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LibAssembly\LibAssembly.csproj" />
