--- a/Attributes and Reflection/Attributes and Reflection.csproj
+++ b/Attributes and Reflection/Attributes and Reflection.csproj
@@ -6,4 +6,11 @@
     <RootNamespace>Attributes_and_Reflection</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
