--- a/delegete,events/delegete,events.csproj
+++ b/delegete,events/delegete,events.csproj
@@ -6,4 +6,11 @@
     <RootNamespace>delegete_events</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
