--- a/LINQ/LINQ.csproj
+++ b/LINQ/LINQ.csproj
@@ -48,9 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtensionMethodExample.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThisInCsharp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
