--- a/LINQ/LINQ.csproj
+++ b/LINQ/LINQ.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compiler Translation of a Larger Example.cs" />
+    <Compile Include="Deferred Execution - Assembly Line.cs" />
     <Compile Include="ExtensionMethodExample.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Introduction To Deferred Execution.cs" />
