--- a/LINQ/LINQ.csproj
+++ b/LINQ/LINQ.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Linq1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runtime Created Assembly Lines.cs" />
     <Compile Include="ThisInCsharp.cs" />
     <Compile Include="Writing Your Own LINQ Extension Method.cs" />
   </ItemGroup>
