--- a/EntityFramework 2/EntityFramework 2.csproj
+++ b/EntityFramework 2/EntityFramework 2.csproj
@@ -5,10 +5,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2EFE6705-B939-4B0F-8755-0C371F91F3D2}</ProjectGuid>
+    <ProjectGuid>{4B56DC44-5700-4769-AE8D-53EE2083EDBB}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>EntityFrameWork</RootNamespace>
-    <AssemblyName>EntityFrameWork</AssemblyName>
+    <RootNamespace>EntityFramework_2</RootNamespace>
+    <AssemblyName>EntityFramework 2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -53,22 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entity Framework Hello World.cs" />
-    <Compile Include="Migrations\202110310707542_first.cs" />
-    <Compile Include="Migrations\202110310707542_first.designer.cs">
-      <DependentUpon>202110310707542_first.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202110310742008_second.cs" />
-    <Compile Include="Migrations\202110310742008_second.designer.cs">
-      <DependentUpon>202110310742008_second.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202110310754092_second-modify.cs" />
-    <Compile Include="Migrations\202110310754092_second-modify.designer.cs">
-      <DependentUpon>202110310754092_second-modify.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202110311247012_mm.cs" />
-    <Compile Include="Migrations\202110311247012_mm.designer.cs">
-      <DependentUpon>202110311247012_mm.cs</DependentUpon>
+    <Compile Include="many_to_many.cs" />
+    <Compile Include="Migrations\202110312019440_first.cs" />
+    <Compile Include="Migrations\202110312019440_first.designer.cs">
+      <DependentUpon>202110312019440_first.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
@@ -79,17 +67,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202110310707542_first.resx">
-      <DependentUpon>202110310707542_first.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202110310742008_second.resx">
-      <DependentUpon>202110310742008_second.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202110310754092_second-modify.resx">
-      <DependentUpon>202110310754092_second-modify.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202110311247012_mm.resx">
-      <DependentUpon>202110311247012_mm.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202110312019440_first.resx">
+      <DependentUpon>202110312019440_first.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
