--- a/Dependency injection tools/Dependency injection tools.csproj
+++ b/Dependency injection tools/Dependency injection tools.csproj
@@ -60,9 +60,21 @@
     <Compile Include="InvoiceService.cs" />
     <Compile Include="InvoiceToInvoiceListingTranslator.cs" />
     <Compile Include="ITranslate.cs" />
+    <Compile Include="our own DI tool with lifetime\DependencyContainer.cs" />
+    <Compile Include="our own DI tool with lifetime\DependencyLifeTime.cs" />
+    <Compile Include="our own DI tool with lifetime\DependencyResolver.cs" />
+    <Compile Include="our own DI tool with lifetime\DependencyResolver2.cs" />
+    <Compile Include="our own DI tool with lifetime\EntryPoint.cs" />
+    <Compile Include="our own DI tool with lifetime\IService1.cs" />
+    <Compile Include="our own DI tool with lifetime\Service1.cs" />
+    <Compile Include="our own DI tool with lifetime\Service2.cs" />
+    <Compile Include="our own DI tool with lifetime\ServiceConsumer.cs" />
+    <Compile Include="our own DI tool\DependencyLifeTime.cs" />
+    <Compile Include="our own DI tool\DependencyResolver2.cs" />
     <Compile Include="our own DI tool\DependencyContainer.cs" />
     <Compile Include="our own DI tool\DependencyResolver.cs" />
     <Compile Include="our own DI tool\EntryPoint.cs" />
+    <Compile Include="our own DI tool\IService1.cs" />
     <Compile Include="our own DI tool\Service1.cs" />
     <Compile Include="our own DI tool\Service2.cs" />
     <Compile Include="our own DI tool\ServiceConsumer.cs" />
