--- a/Dependency injection tools/Dependency injection tools.csproj
+++ b/Dependency injection tools/Dependency injection tools.csproj
@@ -65,6 +65,7 @@
     <Compile Include="our own DI tool with lifetime\DependencyResolver.cs" />
     <Compile Include="our own DI tool with lifetime\Dpendency.cs" />
     <Compile Include="our own DI tool with lifetime\EntryPoint.cs" />
+    <Compile Include="our own DI tool with lifetime\IService1.cs" />
     <Compile Include="our own DI tool with lifetime\Service1.cs" />
     <Compile Include="our own DI tool with lifetime\Service2.cs" />
     <Compile Include="our own DI tool with lifetime\ServiceConsumer.cs" />
