--- a/ADO/Web.config
+++ b/ADO/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="cs" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = Northwind;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+		<add name="northwind" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = Northwind;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+		<add name="firstdb" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = FirstDB;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
