--- a/WebFormFirst/Web.config
+++ b/WebFormFirst/Web.config
@@ -12,6 +12,7 @@
         <add namespace="System.Web.Optimization" />
       </namespaces>
       <controls>
+		  <add  src="~/calenderControl.ascx" tagPrefix="uc1" tagName="calenderControl" />
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
