--- a/WebFormFirst/Web.config
+++ b/WebFormFirst/Web.config
@@ -12,6 +12,8 @@
         <add namespace="System.Web.Optimization" />
       </namespaces>
       <controls>
+		  <!--if we register user control here we the file of the use control cannot be at the same level as the 
+		  config file , we need to but the user contorl in sub folder-->
 		  <add  src="~/calenderControl.ascx" tagPrefix="uc1" tagName="calenderControl" />
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
