--- a/WebFormFirst/WebFormFirst.csproj
+++ b/WebFormFirst/WebFormFirst.csproj
@@ -107,6 +107,7 @@
   <ItemGroup>
     <Content Include="About.aspx" />
     <Content Include="LoadinguserControlDynamically.aspx" />
+    <Content Include="LoadinguserControlDynamically2.aspx" />
     <Content Include="usercontrols\calenderControl.ascx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -184,6 +185,13 @@
     </Compile>
     <Compile Include="LoadinguserControlDynamically.aspx.designer.cs">
       <DependentUpon>LoadinguserControlDynamically.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="LoadinguserControlDynamically2.aspx.cs">
+      <DependentUpon>LoadinguserControlDynamically2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LoadinguserControlDynamically2.aspx.designer.cs">
+      <DependentUpon>LoadinguserControlDynamically2.aspx</DependentUpon>
     </Compile>
     <Compile Include="usercontrols\calenderControl.ascx.cs">
       <DependentUpon>calenderControl.ascx</DependentUpon>
