--- a/WebFormFirst/WebFormFirst.csproj
+++ b/WebFormFirst/WebFormFirst.csproj
@@ -44,6 +44,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CustomeServerControls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\CustomeServerControls\bin\Debug\CustomeServerControls.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
@@ -132,6 +136,7 @@
     <Content Include="images\images.png" />
     <Content Include="sessionstate.aspx" />
     <Content Include="usercontrol.aspx" />
+    <Content Include="UsingCustomServerControls.aspx" />
     <Content Include="WebForm1.aspx" />
     <Content Include="WebForm2.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -262,6 +267,13 @@
     </Compile>
     <Compile Include="usercontrols\CalenderValueChangedEventArgs.cs" />
     <Compile Include="usercontrols\CalenderVisabilityChangedEventArgs.cs" />
+    <Compile Include="UsingCustomServerControls.aspx.cs">
+      <DependentUpon>UsingCustomServerControls.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UsingCustomServerControls.aspx.designer.cs">
+      <DependentUpon>UsingCustomServerControls.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
