--- a/WebFormFirst/Web.config
+++ b/WebFormFirst/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="firstdb" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = FirstDB;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
