--- a/WebFormFirst/WebFormFirst.csproj
+++ b/WebFormFirst/WebFormFirst.csproj
@@ -112,6 +112,7 @@
     <Content Include="About.aspx" />
     <Content Include="Caching.aspx" />
     <Content Include="CachingMultipleResponsesForSingleWebform.aspx" />
+    <Content Include="ControlCachingInCode.aspx" />
     <Content Include="LoadinguserControlDynamically.aspx" />
     <Content Include="LoadinguserControlDynamically2.aspx" />
     <Content Include="usercontrols\calenderControl.ascx" />
@@ -199,6 +200,13 @@
     </Compile>
     <Compile Include="CachingMultipleResponsesForSingleWebform.aspx.designer.cs">
       <DependentUpon>CachingMultipleResponsesForSingleWebform.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ControlCachingInCode.aspx.cs">
+      <DependentUpon>ControlCachingInCode.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ControlCachingInCode.aspx.designer.cs">
+      <DependentUpon>ControlCachingInCode.aspx</DependentUpon>
     </Compile>
     <Compile Include="LoadinguserControlDynamically.aspx.cs">
       <DependentUpon>LoadinguserControlDynamically.aspx</DependentUpon>
