--- a/WebFormFirst/WebFormFirst.csproj
+++ b/WebFormFirst/WebFormFirst.csproj
@@ -110,9 +110,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="CachAddArgument128.aspx" />
     <Content Include="CachDict127.aspx" />
     <Content Include="Caching.aspx" />
-    <Content Include="Caching22.aspx" />
     <Content Include="CachingMultipleResponsesForSingleWebform.aspx" />
     <Content Include="ControlCachingInCode.aspx" />
     <Content Include="fragmentCaching.aspx" />
@@ -191,6 +191,13 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="CachAddArgument128.aspx.cs">
+      <DependentUpon>CachAddArgument128.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CachAddArgument128.aspx.designer.cs">
+      <DependentUpon>CachAddArgument128.aspx</DependentUpon>
+    </Compile>
     <Compile Include="CachDict127.aspx.cs">
       <DependentUpon>CachDict127.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -204,13 +211,6 @@
     </Compile>
     <Compile Include="Caching.aspx.designer.cs">
       <DependentUpon>Caching.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Caching22.aspx.cs">
-      <DependentUpon>Caching22.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Caching22.aspx.designer.cs">
-      <DependentUpon>Caching22.aspx</DependentUpon>
     </Compile>
     <Compile Include="CachingMultipleResponsesForSingleWebform.aspx.cs">
       <DependentUpon>CachingMultipleResponsesForSingleWebform.aspx</DependentUpon>
