--- a/WebFormFirst/Web.config
+++ b/WebFormFirst/Web.config
@@ -8,6 +8,16 @@
 		<add name="firstdb" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = FirstDB;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
   <system.web>
+	  
+	  <caching>
+		  <!--pollTime by millsec meaning each 2 sec it will go and check if the table is changed -->
+		  <sqlCacheDependency pollTime="2000" enabled="true">
+			  <databases>
+				  <add name="firstdb" connectionStringName="firstdb" />	  
+			  </databases>
+		  </sqlCacheDependency>
+	  </caching>
+	  
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <pages>
