--- a/ADO/Web.config
+++ b/ADO/Web.config
@@ -9,6 +9,13 @@
 		<add name="firstdb" connectionString="Data Source=.;Integrated Security = SSPI; Initial Catalog = FirstDB;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
   <system.web>
+	  <caching>
+		  <sqlCacheDependency pollTime="2000" enabled="true">
+			  <databases>
+				  <add name="firstdb" connectionStringName="firstdb"/>
+			  </databases>
+		  </sqlCacheDependency>
+	  </caching>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <pages>
