--- a/ADO/ADO.csproj
+++ b/ADO/ADO.csproj
@@ -130,6 +130,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="multipledatasets.aspx" />
+    <Content Include="SqlCommandBuilder.aspx" />
     <Content Include="sqlinjection.aspx" />
     <Content Include="storedProcedure.aspx" />
     <Content Include="WebForm1.aspx" />
@@ -252,6 +253,13 @@
     </Compile>
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
+    </Compile>
+    <Compile Include="SqlCommandBuilder.aspx.cs">
+      <DependentUpon>SqlCommandBuilder.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SqlCommandBuilder.aspx.designer.cs">
+      <DependentUpon>SqlCommandBuilder.aspx</DependentUpon>
     </Compile>
     <Compile Include="sqlinjection.aspx.cs">
       <DependentUpon>sqlinjection.aspx</DependentUpon>
