--- a/ADO/ADO.csproj
+++ b/ADO/ADO.csproj
@@ -106,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="acceptAndRejectChanges.aspx" />
     <Content Include="cachingDataSets.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -172,6 +173,13 @@
     <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="acceptAndRejectChanges.aspx.cs">
+      <DependentUpon>acceptAndRejectChanges.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="acceptAndRejectChanges.aspx.designer.cs">
+      <DependentUpon>acceptAndRejectChanges.aspx</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
       <DependentUpon>About.aspx</DependentUpon>
