--- a/ADO/ADO.csproj
+++ b/ADO/ADO.csproj
@@ -135,7 +135,7 @@
     <Content Include="SqlCommandBuilder.aspx" />
     <Content Include="sqlinjection.aspx" />
     <Content Include="storedProcedure.aspx" />
-    <Content Include="typeVSuntypedDS.aspx" />
+    <Content Include="untypedDS.aspx" />
     <Content Include="WebForm1.aspx" />
     <Content Include="WebForm2.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -293,12 +293,12 @@
       <DependentUpon>storedProcedure.aspx</DependentUpon>
     </Compile>
     <Compile Include="Student.cs" />
-    <Compile Include="typeVSuntypedDS.aspx.cs">
-      <DependentUpon>typeVSuntypedDS.aspx</DependentUpon>
+    <Compile Include="untypedDS.aspx.cs">
+      <DependentUpon>untypedDS.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="typeVSuntypedDS.aspx.designer.cs">
-      <DependentUpon>typeVSuntypedDS.aspx</DependentUpon>
+    <Compile Include="untypedDS.aspx.designer.cs">
+      <DependentUpon>untypedDS.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
